force-app/main/default/objects/Enterprise_Progress__c/Enterprise_Progress__c.object-meta.xml
<CustomObject>
    <label>Enterprise Progress</label>
    <nameField>
        <displayFormat>Progress-{0000000}</displayFormat>
        <label>Progress System #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enterprise Progress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>