force-app/main/default/objects/Enterprise_Progress__c/fields/Actual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date__c</fullName>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>