force-app/main/default/objects/Enterprise_Progress__c/fields/Actual_Status__c.field-meta.xml
<CustomField>
    <fullName>Actual_Status__c</fullName>
    <label>Actual Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <color>#AFCADF</color>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>On Track</fullName>
                <color>#78C953</color>
                <label>On Track</label>
            </value>
            <value>
                <fullName>Discuss</fullName>
                <color>#F3D904</color>
                <label>Discuss</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
                <color>#FF6666</color>
                <label>At Risk</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#0B6FCE</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Postponed</fullName>
                <color>#A845DC</color>
                <label>Postponed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>