force-app/main/default/objects/Enterprise_Progress__c/fields/Enterprise_Goal__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Goal__c</fullName>
    <label>Enterprise Goal</label>
    <referenceTo>Enterprise_Goal__c</referenceTo>
    <relationshipLabel>Enterprise Progress</relationshipLabel>
    <relationshipName>Enterprise_Progress</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>