force-app/main/default/objects/Enterprise_Progress__c/fields/Enterprise_Goal_Name__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Goal_Name__c</fullName>
    <formula>Enterprise_Goal__r.Goal_Name_with_Parent__c</formula>
    <label>Enterprise Goal Name</label>
    <type>Text</type>
</CustomField>