force-app/main/default/objects/Enterprise_Progress__c/fields/Key_Activities__c.field-meta.xml
<CustomField>
    <fullName>Key_Activities__c</fullName>
    <label>Key Activities</label>
    <length>750</length>
    <type>Html</type>
</CustomField>