force-app/main/default/objects/Enterprise_Progress__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enterprise_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>