force-app/main/default/objects/Enterprise_Progress__c/fields/Organization_Functions__c.field-meta.xml
<CustomField>
    <fullName>Organization_Functions__c</fullName>
    <label>Organization Functions</label>
    <length>500</length>
    <type>Html</type>
</CustomField>