force-app/main/default/objects/Enterprise_Progress__c/fields/Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Outcomes__c</fullName>
    <label>Outcomes</label>
    <length>500</length>
    <type>Html</type>
</CustomField>