force-app/main/default/objects/Enterprise_Progress__c/fields/Progress_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Progress_Sequence__c</fullName>
    <label>Progress Sequence</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>