force-app/main/default/objects/Enterprise_Progress__c/fields/Running_User_First_Name_within_Team__c.field-meta.xml
<CustomField>
    <fullName>Running_User_First_Name_within_Team__c</fullName>
    <formula>if (contains (Team_Members__c,  $User.FirstName), 1, 0)</formula>
    <label>Running User First Name within Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>