force-app/main/default/objects/Enterprise_Progress__c/fields/Running_User_ID_is_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Running_User_ID_is_Lead_ID__c</fullName>
    <formula>if (Lead__c =  $User.Id, 1, 0)</formula>
    <label>Running User ID is Lead ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>