force-app/main/default/objects/Enterprise_Progress__c/fields/Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Team_Members__c</fullName>
    <label>Team Members</label>
    <type>TextArea</type>
</CustomField>