force-app/main/default/objects/Enterprise_Progress__c/fields/Tools_Resources__c.field-meta.xml
<CustomField>
    <fullName>Tools_Resources__c</fullName>
    <label>Tools &amp; Resources</label>
    <length>500</length>
    <type>Html</type>
</CustomField>