force-app/main/default/objects/Enterprise_Progress__c/recordTypes/Strategic_Plan_Implementation_Step.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Plan_Implementation_Step</fullName>
    <active>true</active>
    <label>Strategic Plan Implementation Step</label>
</RecordType>