force-app/main/default/objects/Enterprise_Progress__c/validationRules/Lead_Can_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Can_Edit</fullName>
    <active>true</active>
    <errorConditionFormula>Running_User_ID_is_Lead_ID__c = 0</errorConditionFormula>
    <errorMessage>Only the Lead can edit this record. If you want to note progress or activities on this step, enter an Activity record, below.</errorMessage>
</ValidationRule>